add examples on how to use the appearance prop, variables prop, and themes

--- a/docs/components/customization/localization.mdx
+++ b/docs/components/customization/localization.mdx
@@ -38,7 +38,7 @@ The `@clerk/localizations` package contains predefined localizations for the Cle
 
 ### Usage
 
-To get started, you need to install the `@clerk/localizations` package.
+To get started, install the `@clerk/localizations` package.
 
 <CodeBlockTabs options={["npm", "yarn", "pnpm"]}>
   ```bash filename="terminal"
