--- a/docs/components/authentication/sign-in.mdx
+++ b/docs/components/authentication/sign-in.mdx
@@ -23,7 +23,7 @@ Below is basic implementation of the `<SignIn />` component. You can use this as
     You can embed the `<SignIn />` component using the [Next.js optional catch-all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-routes). This allows you to redirect the user inside your application. The `<SignIn />` component should be mounted on a public page.
 
     <CodeBlockTabs options={["App Router", "Pages Router"]}>
-      ```jsx filename="/app/sign-in/[[...sign-in]]/page.[jsx/tsx]"
+      ```jsx filename="/app/sign-in/[[...sign-in]]/page.tsx"
       import { SignIn } from "@clerk/nextjs";
 
       export default function Page() {
@@ -37,18 +37,20 @@ Below is basic implementation of the `<SignIn />` component. You can use this as
       const SignInPage = () => (
         <SignIn path="/sign-in" routing="path" signUpUrl="/sign-up" />
       );
+      
       export default SignInPage;
       ```
     </CodeBlockTabs>
   </Tab>
 
   <Tab>
-    ```jsx filename="/pages/sign-in/[[...index]].[jsx/tsx]"
-    import { SignIn } from "@clerk/react";
+    ```jsx filename="/src/sign-in/[[...index]].tsx"
+    import { SignIn } from "@clerk/clerk-react";
 
     const SignInPage = () => (
       <SignIn path="/sign-in" routing="path" signUpUrl="/sign-up" />
     );
+
     export default SignInPage;
     ```
   </Tab>
