--- a/docs/components/customization/themes.mdx
+++ b/docs/components/customization/themes.mdx
@@ -14,7 +14,23 @@ Clerk currently offers four pre-built themes that can be exported from `@clerk/t
 
 ## Usage
 
-To use a theme, import it from `@clerk/themes` and pass it to the `appearance` prop of a Clerk component. You can pass it to the `<ClerkProvider />` component to apply it to all Clerk components in your app. To learn more about how to use themes, see the [Appearance prop](/docs/components/customization/overview#using-a-pre-built-theme) documentiation.
+To get started, install the `@clerk/themes` package.
+
+<CodeBlockTabs options={["npm", "yarn", "pnpm"]}>
+  ```bash filename="terminal"
+  npm install @clerk/themes
+  ```
+
+  ```bash filename="terminal"
+  yarn add @clerk/themes
+  ```
+
+  ```bash filename="terminal"
+  pnpm add @clerk/themes
+  ```
+</CodeBlockTabs>
+
+To use a theme, import it from `@clerk/themes` and pass it to the `appearance` prop of a Clerk component. You can pass it to the [`<ClerkProvider />`](/docs/components/clerk-provider) component to apply it to all Clerk components in your app or you can pass it to a single Clerk component. For guided examples and to learn further about how to use themes, see the [Appearance prop](/docs/components/customization/overview#using-a-pre-built-theme) documentiation.
 
 ### Default theme
 
